# lumea

./: .gitignore  compile_and_copy_core.js  package.json  version.js
.github/workflows/: CI.yml  build_core.yml
.husky/: pre-push.js
api/: dts-bundle-config.json  package-lock.json  package.json  tsconfig.json
api/main/: funcs.ts  index.ts  util.ts
api/scripts/: build.js  func_gen.js  post_build_types.js
builder/: Cargo.toml  index.js  package.json
builder/src/: main.rs
core/: Cargo.toml  example_extension.js
core/src/: main.rs
package/: .npmignore  Cargo.toml  bin_artifacts.js  build.d.ts  build.js  force-node-protocol.js  index.js  install.js  package-lock.json  package.json
package/npm/darwin-x64/: README.md  package.json
package/npm/linux-x64-gnu/: README.md  package.json
package/npm/win32-x64-msvc/: README.md  package.json
package/scripts/: prebuild.js
package/src/: index.ts  lib.rs  util.ts
package/src/api/: build.ts
scripts/: prep_test.js  version.js
