[package]
name = "core"
version = "0.0.9"
edition = "2024"

[profile.release]
incremental = true
codegen-units = 16 # 1 is better but slow, Allows LLVM to perform better optimization.
lto = "thin" # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.

[dependencies]
# Fix some known version conflicts
winapi = { version = "0.3.9", features = ["sysinfoapi"] }

# Real dependencies
rustyscript = { git = "https://github.com/rscarson/rustyscript.git", branch = "master", features = ["all_extensions", "node_experimental"] }
deno_core = "0.340.0"
zip = "3.0.0"
colored = "3.0.0"
sourcemap = "9.2.1"

# Logging
log = "0.4.20"
env_logger = "0.11.3"
tao = "0.33.0"
wry = "0.51.2"
